--- a/index.ipynb
+++ b/index.ipynb
@@ -311,7 +311,8 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    "
+    "    open_list = []\n",
+    "    for "
    ]
   },
   {
