--- a/index.ipynb
+++ b/index.ipynb
@@ -312,7 +312,7 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    open_list = []\n",
-    "    for "
+    "    for restaurant in restaurants:"
    ]
   },
   {
