--- a/index.ipynb
+++ b/index.ipynb
@@ -312,7 +312,8 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    open_list = []\n",
-    "    for restaurant in restaurants:"
+    "    for restaurant in restaurants:\n",
+    "        if restaurant['is']"
    ]
   },
   {
