--- a/index.ipynb
+++ b/index.ipynb
@@ -313,7 +313,8 @@
     "def open_restaurants(restaurants):\n",
     "    open_list = []\n",
     "    for restaurant in restaurants:\n",
-    "        if not restaurant['is_close']"
+    "        if not restaurant['is_close']:\n",
+    "            open_list.append"
    ]
   },
   {
