--- a/index.ipynb
+++ b/index.ipynb
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
     "    open_list = []\n",
     "    for restaurant in restaurants:\n",
     "        if not restaurant['is_close']:\n",
-    "            open_list.append"
+    "            open_list.append(restaurant['name'])"
    ]
   },
   {
