--- a/index.ipynb
+++ b/index.ipynb
@@ -326,7 +326,8 @@
     "    open_list = []\n",
     "    for restaurant in restaurants:\n",
     "        if not restaurant['is_closed']:\n",
-    "            open_list.append(restaurant['name'])"
+    "            open_list.append(restaurant['name'])\n",
+    "            "
    ]
   },
   {
