--- a/index.ipynb
+++ b/index.ipynb
@@ -327,7 +327,7 @@
     "    for restaurant in restaurants:\n",
     "        if not restaurant['is_closed']:\n",
     "            open_list.append(restaurant['name'])\n",
-    "            "
+    "    return open_"
    ]
   },
   {
